# Aithena

./: pyproject.toml  requirements.txt  setup.py
aithena/core/data/: utils.py
aithena/core/nn/: dynamic_nn.py
aithena/core/qlearning/: dqn_trainer.py  q_arbiter.py
aithena/core/simulation/: data_classes.py  experience_provider.py  sample_provider.py  simulation_environment.py  state_manager.py  utils.py
aithena/mock/: mockup.py
aithena/trading/: base_program.py  config_loader.py  evaluation.py  exchange_manager.py  experience_evaluator.py  trading_environment.py  training_manager.py
aithena/trading/test/: test_simulation_environment.py
core/data/technical_indicators/: collection.py  momentum.py  volume.py
core/data/test/: test_exchange_manger.py
depr/data/: normalizer.py  utils.py
depr/data/assets/: asset_manager.py  asset_provider.py  asset_source.py
depr/data/loader/: sql_loader.py
depr/data/test/: test_asset_manager.py  test_asset_provider.py  test_exchange_manger.py  test_indicators.py  test_normalizer.py  test_sample.py  test_utils.py
depr/trading/: base_program.py  config_loader.py  evaluation.py  exchange_manager.py  experience_evaluator.py  trading_environment.py  training_manager.py
src/aithena/nn/: dynamic_nn.py  (+1 more)
src/testing/: test_bp_training.py  test_dict_state.py  test_dqn_training_setup.py  test_dynamic_nn.py  test_experience.py  test_experience_batch.py  test_replaybuffer.py
trading/: base_program.py  config_loader.py  evaluation.py  trading_environment.py  training_manager.py
trading/test/: test_simulation_environment.py
(+58 files in other folders)
